fixed spacing problem when no sidebar is filled

--- a/src/open_inwoner/scss/components/Container/Grid.scss
+++ b/src/open_inwoner/scss/components/Container/Grid.scss
@@ -23,6 +23,7 @@
 
   & > #{&}__sidebar:empty {
     grid-column-end: span 12;
+    display: none;
   }
 
   & > #{&}__sidebar ~ &__main {
